# crabby-chat

./: .gitignore  Dockerfile  README.md
client/: Cargo.toml  angular.json  package-lock.json  package.json  proxy.conf.js
client/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  chat.service.ts  logindialog.component.html  logindialog.component.ts  message.ts
client/src/objects/: user.ts
client/src/services/: chat.service.ts  websocket.service.ts
client/src/styles/: app.component.css  materialtheme.scss
server/: Cargo.toml
server/config/: log4rs.yml
server/src/: chat.rs  main.rs  routes.rs  user.rs
server/src/chat/: chat_manager.rs  chat_room.rs  chat_user.rs  name_extractor.rs
server/src/chat/chat_room/: room_data.rs
server/src/routes/: test_routes.rs  user_routes.rs
server/src/user/: user_db_service.rs
server/src/user/user_db_service/: db_command.rs
server/src/user/user_db_service/db_command/: create_user.rs  delete_user.rs  get_favorites.rs  get_user.rs  update_favorites.rs  update_user.rs
server/test/: test_data.sql
