[package]
name = "server"
version = "0.1.0"
authors = ["Ian Wodder <ian.wodder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
tungstenite = "0.13.0"
futures = "0.3.12"
async-std = "1.9.0"
serde_json = "1.0.62"
serde = { version = "1.0.62", features = ["derive"]}
threadpool = "1.8.1"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["serve", "json"]